feat: standard java command